# lzma-sdk

./: CMakeLists.txt
C/: CMakeLists.txt  sugar.cmake
C/Util/: sugar.cmake
C/Util/7z/: sugar.cmake
C/Util/Lzma/: sugar.cmake
C/Util/LzmaLib/: sugar.cmake
C/Util/SfxSetup/: sugar.cmake
